making vertical navbar in a more bootstrap way. need to fix buttons spacing and scaling

--- a/style.css
+++ b/style.css
@@ -2,21 +2,16 @@
 	height: 100vh;
 }
 
+.sidebar {
+	position: sticky;
+	top: 0;
+	height: 100%;
+	border-right: 1px solid #ddd; /* Optional: Add border for styling */
+}
+
 .btn-icon {
 	width: 48px;
 	aspect-ratio: 1;
 	border-radius: 50%;
 	background-color: orange;
-}
-
-.left-move {
-	transform: translateX(-100vw);
-}
-
-.pop-up {
-	position: absolute;
-	width: 100vw;
-	height: 100vh;
-	background-color: blue;
-	transition: all ease-in-out 0.4ms;
 }
